Added gem settingslogic. Added link on mail to reset password.

--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -6,7 +6,8 @@
   <body>
     <h2>Greatings <%= "#{ @user.name }" %></h2>
     <p>
-      To reset your password, please visit <%= "#{ @user.password_reset_token }" %>
+      To reset your password, please visit
+      <a href=<%="#{Settings.ui_endpoint}/password_resets/#{@user.password_reset_token}/edit"%> >Here</a>
     </p>
   </body>
 </html>
