--- a/app/views/user_mailer/join_to_group.html.erb
+++ b/app/views/user_mailer/join_to_group.html.erb
@@ -6,8 +6,8 @@
   <body>
     <h2>Greetings <%= "#{ @user.name }" %></h2>
     <p>
-      To reset your password, please visit
-      <a href=<%="#{Settings.ui_endpoint}/password_resets/#{@user.password_reset_token}/edit"%> >Here</a>
+      Welcome! You've joined to the Group <%= "#{@group.name}" %> <br>
+      Click <a href=<%= "#{Settings.ui_endpoint}/#groups/#{@group.id}/posts" %>>here</a> to visit the group.
     </p>
   </body>
 </html>
