--- a/app/views/user_mailer/invitation_to_alumnet.html.erb
+++ b/app/views/user_mailer/invitation_to_alumnet.html.erb
@@ -1,13 +1,37 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
-  </head>
-  <body>
-    <h2>Hi <%= "#{ @guest_name }" %></h2>
-    <p>
-      <%="#{ @user.name }"%> is inviting you to join to Alumnet!
-      Click <a href=<%= "#{Settings.ui_endpoint}/" %>>here</a> to visit AlumNet.
-    </p>
-  </body>
-</html>
+<div style="background:#e6e6e8; color:#111; padding: 15px; font-size:1em;">
+  <p>Hello <%= "#{ @guest_name }" %></p>
+  <p>
+    The AIESEC Alumni <%="#{ @user.name }"%> sent you this invitation to join AlumNet. 
+  </p>
+
+  <p>
+    <a href=<%= "#{Settings.ui_endpoint}/" %>>Click here to register in AlumNet</a>
+  </p>
+
+  <h3>What is AlumNet?</h3>
+
+  <p>
+    AlumNet is the official platform for all AIESEC Alumni developed by the AIESEC Alumni International organisation.
+  </p>
+  <p>
+    <small style="font-size:1.3em;">Join us now!</small>
+    <br>
+    <small style="font-size:1em;">
+      and help transform our global network of AIESEC alumni into a powerful force for positive change!
+    </small>
+  </p>
+</div>
+<div style="background:#4c6672; padding:15px; color:#B7BFC3; font-size:1em;">
+  <p>
+    <img src="<%= "#{Settings.ui_endpoint}/assets/home/alumNetLogo.png" %>" alt="">
+    <strong>AIESEC Alumni International</strong><br>
+    <small>Ave de Tervuren 300, B-1150 Brussels, Belgium International Non Profit </small>
+    <br>
+    <small>Organisation recognized by Belgian Royal Decree 16/05/1991 VZW- AiSBL.</small>
+    <br>
+    <small>Registered in Belgium under 0456.060.148, RPR/RPM Brussels</small>
+    <br>
+    <small>Copyright © 2015 AIESEC Alumni International. All rights reserved.</small>
+  </p>
+</div>
+
