Modi fy HTML Template for transactional emails

--- a/app/views/admin_mailer/user_request_approval.html.erb
+++ b/app/views/admin_mailer/user_request_approval.html.erb
@@ -1,8 +1,8 @@
-<h2>Greetings <%= "#{ @admin.name }" %></h2>
-<p>
-  The user <%= "#{@user.name}" %> sent a request for you to approve him/her
-  <br>
-  Click <a href=<%= "#{Settings.ui_endpoint}/#admin/users/#{@user.id}" %>>here</a> to see the user's information      
-</p>
-
-
+<div style="background:#e6e6e8; color:#111; padding: 15px; font-size:1em;">
+	<p>Greetings <%= "#{ @admin.name }" %></p>
+	<p>
+	  The user <%= "#{@user.name}" %> sent a request for you to approve him/her
+	  <br>
+	  Click <a href=<%= "#{Settings.ui_endpoint}/#admin/users/#{@user.id}" %>>here</a> to see the user's information      
+	</p>
+</div>
