--- a/app/views/admin_mailer/user_request_to_join.html.erb
+++ b/app/views/admin_mailer/user_request_to_join.html.erb
@@ -1,15 +1,9 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
-  </head>
-  <body>
-    <h2>Greetings <%= "#{ @admin.name }" %></h2>
+<div style="background:#e6e6e8; color:#111; padding: 15px; font-size:1em;">
+    <p>Greetings <%= "#{ @admin.name }" %></p>
     <p>
       The user <%= "#{@user.name}" %> sent a request to join the group <%= "#{@group.name}" %>.
     </p>
     <p>      
       Click <a href=<%= "#{Settings.ui_endpoint}/#groups/#{@group.id}/members" %>>here</a> to visit the group.
     </p>
-  </body>
-</html>
+</div>
