--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
-  </head>
-  <body>
-    <h2>Greetings <%= "#{ @user.name }" %></h2>
-    <p>
+<div style="background:#e6e6e8; color:#111; padding: 15px; font-size:1em;">
+  <p>Greetings <%= "#{ @user.name }" %></p>
+  <p>
       To reset your password, please visit
       <a href=<%="#{Settings.ui_endpoint}/password_resets/#{@user.password_reset_token}/edit"%> >Here</a>
-    </p>
-  </body>
-</html>
+  </p>
+</div>
