--- a/app/views/user_mailer/approval_request_accepted.html.erb
+++ b/app/views/user_mailer/approval_request_accepted.html.erb
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
-  </head>
-  <body>
-    <h2>Greetings <%= "#{ @user.name }" %></h2>
-    <p>
+<div style="background:#e6e6e8; color:#111; padding: 15px; font-size:1em;">
+  <p>Greetings <%= "#{ @user.name }" %></p>
+  <p>
       The user <%= "#{@approver.name}" %> has accepted your request for AlumNet access. <br>
       You have <%= "#{@user.get_approved_requests.count}" %> approves and only need <%= 3 - @user.get_approved_requests.count %> more approves to become an active member.      
     </p>
-  </body>
-</html>
+</div>
