--- a/app/views/user_mailer/friend_accept_friendship.html.erb
+++ b/app/views/user_mailer/friend_accept_friendship.html.erb
@@ -1,13 +1,11 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
-  </head>
-  <body>
-    <h2>Greetings <%= "#{ @user.name }" %></h2>
-    <p>
+<div style="background:#e6e6e8; color:#111; padding: 15px; font-size:1em;">
+  <p>Greetings <%= "#{ @user.name }" %></p>
+  <p>
+    The AIESEC Alumni <%="#{ @user.name }"%> sent you this invitation to join AlumNet. 
+  </p>
+
+  <p>
       The user <%= "#{@friend.name}" %> has accepted your friendship request <br>
       Click <a href=<%= "#{Settings.ui_endpoint}/#users/#{@friend.id}/about" %>>here</a> to see the profile of you new friend!
-    </p>
-  </body>
-</html>
+  </p>
+</div>
