--- a/app/views/user_mailer/invitation_to_event.html.erb
+++ b/app/views/user_mailer/invitation_to_event.html.erb
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
-  </head>
-  <body>
-    <h2>Greetings <%= "#{ @user.name }" %></h2>
-    <p>
+<div style="background:#e6e6e8; color:#111; padding: 15px; font-size:1em;">
+  <p>Greetings <%= "#{ @user.name }" %></p>
+  <p>
       The user <%= "#{@event.creator.name}" %> is inviting you to assist the event <%= "#{@event.name}" %> <br>
       Click <a href=<%= "#{Settings.ui_endpoint}/#events/#{@event.id}/posts" %>>here</a> to visit the group.
-    </p>
-  </body>
-</html>
+  </p>
+</div>
