--- a/app/views/user_mailer/user_request_friendship.html.erb
+++ b/app/views/user_mailer/user_request_friendship.html.erb
@@ -1,6 +1,7 @@
-<h2>Greetings <%= "#{ @friend.name }" %></h2>
-<p>
-  The user <%= "#{@user.name}" %> sent you a friendship request <br>
-  Click <a href=<%= "#{Settings.ui_endpoint}/#friends" %>>here</a> to accept
-</p>
-
+<div style="background:#e6e6e8; color:#111; padding: 15px; font-size:1em;">
+	<p>Greetings <%= "#{ @friend.name }" %></p>
+	<p>
+	  The user <%= "#{@user.name}" %> sent you a friendship request <br>
+	  Click <a href=<%= "#{Settings.ui_endpoint}/#friends" %>>here</a> to accept
+	</p>	
+</div>
