--- a/app/views/layouts/user_mailer.html.erb
+++ b/app/views/layouts/user_mailer.html.erb
@@ -6,14 +6,15 @@
   <body>
   	<!-- Header on -->
 	<div style="background:#2b2b2b; padding:15px; color:#B7BFC3; font-size:1em;">
-	  <img src="<%= "#{Settings.ui_endpoint}/assets/home/alumNetLogo.png" %>" alt="" style="position:relative; left:50%; margin-left:-80px;">
+	  <img style="left:50%; position:relative; margin-left:-115px;" src="http://alumnet-test.aiesec-alumni.org/assets/home/alumNetLogoHome-d7915a8dc399253c2db4b2cb2f465eae.png">
 	</div>
 	<!-- Header off -->
     <%= yield %>   
      <!-- Footer on --> 
     <div style="background:#4c6672; padding:15px; color:#B7BFC3; font-size:1em;">
 	  <p>
-	    <img src="/assets/home/alumNetLogo.png" alt="">
+	    <img style="  max-width: 140px;" src="http://alumnet-test.aiesec-alumni.org/assets/home/alumNetLogo-41a4b9ab00d91742d38f057fb75656ec.png">
+	    <br>
 	    <strong>AIESEC Alumni International</strong><br>
 	    <small>Ave de Tervuren 300, B-1150 Brussels, Belgium International Non Profit </small>
 	    <br>
