--- a/app/views/admin_mailer/user_was_joined.html.erb
+++ b/app/views/admin_mailer/user_was_joined.html.erb
@@ -1,7 +1,7 @@
 <div style="background:#e6e6e8; color:#111; padding: 15px; font-size:1em;">
     <p>Greetings <%= "#{ @admin.name }" %></p>
     <p>
-      The user <%= "#{@user.name}" %> was joined to the group <%= "#{@group.name}" %>
+      <%= "#{@user.name}" %> was joined to the group <%= "#{@group.name}" %>
       Click <a href=<%= "#{Settings.ui_endpoint}/#groups/#{@group.id}/members" %>>here</a> to visit the group.
     </p>
 </div>
