--- a/app/views/user_mailer/friend_accept_friendship.html.erb
+++ b/app/views/user_mailer/friend_accept_friendship.html.erb
@@ -5,7 +5,7 @@
   </p>
 
   <p>
-      The user <%= "#{@friend.name}" %> has accepted your friendship request <br>
+      <%= "#{@friend.name}" %> has accepted your friendship request <br>
       Click <a href=<%= "#{Settings.ui_endpoint}/#users/#{@friend.id}/about" %>>here</a> to see the profile of you new friend!
   </p>
 </div>
