--- a/app/views/user_mailer/user_request_friendship.html.erb
+++ b/app/views/user_mailer/user_request_friendship.html.erb
@@ -1,7 +1,7 @@
 <div style="background:#e6e6e8; color:#111; padding: 15px; font-size:1em;">
 	<p>Greetings <%= "#{ @friend.name }" %></p>
 	<p>
-	  The user <%= "#{@user.name}" %> sent you a friendship request <br>
+	  <%= "#{@user.name}" %> sent you a friendship request <br>
 	  Click <a href=<%= "#{Settings.ui_endpoint}/#friends" %>>here</a> to accept
 	</p>	
 </div>
