--- a/app/views/user_mailer/join_to_group.html.erb
+++ b/app/views/user_mailer/join_to_group.html.erb
@@ -1,7 +1,7 @@
 <div style="background:#e6e6e8; color:#111; padding: 15px; font-size:1em;">
     <p>Greetings <%= "#{ @user.name }" %></p>
     <p>
-      Welcome! You've joined to the Group <%= "#{@group.name}" %> <br>
+      Welcome! The user <%= @sender.name %> added you to the <% @group.mode %> group <%= @group.name %><br>
       Click <a href=<%= "#{Settings.ui_endpoint}/#groups/#{@group.id}/posts" %>>here</a> to visit the group.
     </p>
 </div>
