--- a/app/views/user_mailer/invitation_to_alumnet.html.erb
+++ b/app/views/user_mailer/invitation_to_alumnet.html.erb
@@ -1,23 +1,16 @@
 <div style="background:#e6e6e8; color:#111; padding: 15px; font-size:1em;">
-  <p>Hello <%= "#{ @guest_name }" %></p>
+  <p>Hey AIESEC Alumni!</p>
   <p>
-    The AIESEC Alumni <%="#{ @user.name }"%> sent you this invitation to join AlumNet.
+    <b><%="#{ @user.name }"%></b> sent you this invitation to join AlumNet.
+  </p>
+  <p>
+    <b>AlumNet</b> is the official online platform for AIESEC Alumni worldwide developed by AIESEC Alumni International.
+  </p>
+  <p>
+    Finally, we can really all be together in one space.  
+  </p>
+  <p>
+    Click <b><a href=<%= "#{Settings.ui_endpoint}/home/?invitation_token=#{@token}" %>>here</a></b> to join AlumNet today.
   </p>
 
-  <p>
-    <a href=<%= "#{Settings.ui_endpoint}/home/?invitation_token=#{@token}" %>>Click here to register in AlumNet</a>
-  </p>
-
-  <h3>What is AlumNet?</h3>
-
-  <p>
-    AlumNet is the official platform for all AIESEC Alumni developed by the AIESEC Alumni International organisation.
-  </p>
-  <p>
-    <small style="font-size:1.3em;">Join us now!</small>
-    <br>
-    <small style="font-size:1em;">
-      and help transform our global network of AIESEC alumni into a powerful force for positive change!
-    </small>
-  </p>
 </div>
