--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -1,11 +1,11 @@
 <div style="background:#e6e6e8; color:#111; padding: 15px; font-size:1em;">
-    Welcome to AlumNet <%= @user.profile.first_name %>!
+    <p>Welcome to AlumNet <%= @user.profile.first_name %>!</p>
 
-    Your accounts has been approved
+    <p>Your accounts has been approved</p>
 
-    Now you are ready to join the AIESEC Alumni community in AlumNet and re-connect with fellow Alumni around the world!
+    <p>Now you are ready to join the AIESEC Alumni community in AlumNet and re-connect with fellow Alumni around the world!</p>
 
-    Also you will be able to join groups based on geographical locations or topics of your interest and stay updated with AIESEC Alumni events around you!
+    <p>Also you will be able to join groups based on geographical locations or topics of your interest and stay updated with AIESEC Alumni events around you!</p>
 
-    <a href=<%="#{Settings.ui_endpoint}/home/" %>>Login In AlumNet Now</a>
+    <p><a href=<%="#{Settings.ui_endpoint}/home/" %>>Login In AlumNet Now</a></p>
 </div>
