Copy welcome email

--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -1,7 +1,7 @@
 <div style="background:#e6e6e8; color:#111; padding: 15px; font-size:1em;">
     <p>Welcome to AlumNet <%= @user.profile.first_name %>!</p>
 
-    <p>Your accounts has been approved</p>
+    <p>Your account has been approved</p>
 
     <p>Now you are ready to join the AIESEC Alumni community in AlumNet and re-connect with fellow Alumni around the world!</p>
 
