Link request approval

--- a/app/views/user_mailer/user_request_approval.html.erb
+++ b/app/views/user_mailer/user_request_approval.html.erb
@@ -4,6 +4,6 @@
 	  <%= "#{ @requester.name }" %> says: Hello, I'm registering in Alumnet. Please approve my membership      
 	</p>
 	<p>
-	  Check your pending approval requests <a href=<%= "#{Settings.ui_endpoint}/#friends" %>>here</a>.
+	  Check your pending approval requests <a href=<%= "#{Settings.ui_endpoint}/#approval-requests" %>>here</a>.
 	</p>
 </div>
