--- a/app/views/user_mailer/friend_accept_friendship.html.erb
+++ b/app/views/user_mailer/friend_accept_friendship.html.erb
@@ -1,8 +1,5 @@
 <div style="background:#e6e6e8; color:#111; padding: 15px; font-size:1em;">
-  <p>Greetings <%= "#{ @user.name }" %></p> 
-
-  <p>
-      <%= "#{@friend.name}" %> has accepted your friendship request <br>
-      Click <a href=<%= "#{Settings.ui_endpoint}/#users/#{@friend.id}/about" %>>here</a> to see the profile of you new friend!
-  </p>
+  <p>Hello <%= "#{ @user.name }" %>,</p> 
+	<p><a href=<%= "#{Settings.ui_endpoint}/#users/#{@friend.id}/about" %>><%= "#{@friend.name}" %></a> has accepted your friendship request.</p>
+	<p>Now you can visit <a href=<%= "#{Settings.ui_endpoint}/#users/#{@friend.id}/about" %>><%= "#{@friend.name}" %> profile</a> in AlumNet.</p>
 </div>
