Change copy email password reset

--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,7 +1,10 @@
 <div style="background:#e6e6e8; color:#111; padding: 15px; font-size:1em;">
-  <p>Greetings <%= "#{ @user.name }" %></p>
+  <p>Hi <%= "#{ @user.name }" %>,</p>
   <p>
-      To reset your password, please visit
-      <a href=<%="#{Settings.ui_endpoint}/password_resets/#{@user.password_reset_token}/edit"%> >Here</a>
+      Click <a href=<%="#{Settings.ui_endpoint}/password_resets/#{@user.password_reset_token}/edit"%> >here</a> to reset your password.
+  </p>
+  <p>
+  	Cheers, <br>
+	AlumNet
   </p>
 </div>
