Modifique el copy del email de aceptación en un grupo

--- a/app/views/user_mailer/user_was_accepted_in_group.html.erb
+++ b/app/views/user_mailer/user_was_accepted_in_group.html.erb
@@ -1,11 +1,11 @@
-<h2>Hello <%= "#{ @user.name }" %></h2>
+<h2>Hi <%= "#{ @user.name }" %></h2>
 <p>
   Your request to join the group <%= "#{@group.name}" %> was accepted, and now you can join the conversation!
 </p>
 <p>
   Click here to visit the group <%= "#{@group.name}" %>  
 </p>
-  Once you enter in the group you can:
+  Once you have entered the AlumNet group page, you may:
 <ul>
   <li>
     See a create new group posts    
@@ -14,13 +14,13 @@
     Check the events happening in the group
   </li>
   <li>    
-    Look at picture galleries in the group
+    Post photos and view picture galleries posted by group members
   </li>
   <li>    
-    Connect with other AIESEC Alumni
+    Connect with other group members
   </li>
 </ul>
 
 <br>
-  Enjoy!  
+  Welcome to group AlumNet!  Enjoy!  
 
