Modified emails footer

--- a/app/views/layouts/user_mailer.html.erb
+++ b/app/views/layouts/user_mailer.html.erb
@@ -16,11 +16,11 @@
 	    <img style="max-width: 140px;" src="<%= Settings.api_endpoint + "/images/alumnet/alumNetLogo.png" %>">
 	    <br>
 	    <strong>AIESEC Alumni International</strong><br>
-	    <small>Ave de Tervuren 300, B-1150 Brussels, Belgium International Non Profit </small>
+	    <small>Boulevard du Souverain N° 280, B-1160 Brussels, Belgium.</small>
 	    <br>
-	    <small>Organisation recognized by Belgian Royal Decree 16/05/1991 VZW- AiSBL.</small>
+	    <small>International Non Profit Organisation recognized by Belgian Royal Decree 16/05/1991 iVZW- AiSBL.</small>
 	    <br>
-	    <small>Registered in Belgium under 0456.060.148, RPR/RPM Brussels</small>
+	    <small>Registered in Belgium under 0456.060.148, RPR/RPM Brussels.</small>
 	    <br>
 	    <small>Copyright © 2015 AIESEC Alumni International. All rights reserved.</small>
 	  </p>
