Fix bug on meetup apply email to creator user

--- a/app/views/user_mailer/meetup_apply.html.erb
+++ b/app/views/user_mailer/meetup_apply.html.erb
@@ -12,12 +12,13 @@
     </p>
 
     <p>
-    	Arrival date: <%= @task.arrival_date.strftime("%B %d %Y") %></br>
+    	Arrival date: <%= @task.arrival_date.strftime("%B %d %Y") %><br>
     	Departure date: <%= @task.post_until.strftime("%B %d %Y") %>
     </p>
+    <p>
     	We encourage you to 
     	<a href=<%="#{Settings.ui_endpoint}/#conversations" %>>send a message</a> 
-    	to polish details, where you can propose or ask for a specific day, hour and place. Get the best from the AAI family and enjoy your trip while networking with incredible people!
+    	to polish details, where you can propose or ask for a specific day, hour and place.<br>Get the best from the AAI family and enjoy your trip while networking with incredible people!
     <p>
     	
     </p>
