--- a/app/views/admin_mailer/user_have_match_in_task.html.erb
+++ b/app/views/admin_mailer/user_have_match_in_task.html.erb
@@ -1,8 +1,8 @@
 <div style="background:#e6e6e8; color:#111; padding: 15px; font-size:1em;">
-  <p>Greetings <%= "#{ @user.name }" %></p>
+  <p>Hello <%= "#{ @user.name }" %></p>
   <p>
-    You have a new match in a task.
+    The company <%= "#{@task.company.name}" %> added a the job post <%= "#{@task.name}" %> that matches with your profile
     <br>
-    Click <a href=<%= "#{Settings.ui_endpoint}/#job-exchange/#{@task.id}" %>>here</a> to see the task's information
+    See more details <a href=<%= "#{Settings.ui_endpoint}/#job-exchange/#{@task.id}" %>>here</a>.
   </p>
 </div>
