User request approval

--- a/app/views/user_mailer/user_request_approval.html.erb
+++ b/app/views/user_mailer/user_request_approval.html.erb
@@ -1,9 +1,16 @@
 <div style="background:#e6e6e8; color:#111; padding: 15px; font-size:1em;">
 	<p>Hello <%= "#{ @approver.name }" %>,</p>
 	<p>
-	  <%= "#{ @requester.name }" %> would like you to approve her request to be a registered member of AlumNet.     
+		<%= "#{ @requester.name }" %> just registered in AlumNet and must to be verified by other Alumni before getting access into the platform.     
 	</p>
 	<p>
-	  Check your pending approval requests <a href=<%= "#{Settings.ui_endpoint}/#approval-requests" %>>here</a>.
+	  In case you know <%= "#{ @requester.name }" %> <a href=<%= "#{Settings.ui_endpoint}/#approval-requests" %>>you can give your approval</a>  (And by giving your approval you will earn 10 points in AlumNet!)
+	</p>
+	<p>
+	  If you don't know this person please just ignore this message.
+	</p>
+	<p>
+	<p>
+	 	If you think this user should NOT be in AlumNet <a href="mailto:aiesec-alumni@inbox.groovehq.com" target="_blank"> you can report this account</a>  to the administrator.
 	</p>
 </div>
