url for friendship received

--- a/app/views/user_mailer/user_request_friendship.html.erb
+++ b/app/views/user_mailer/user_request_friendship.html.erb
@@ -4,7 +4,7 @@
 	  <%= "#{@user.name}" %> sent you a friendship request on AlumNet.
 	</p>
 	<p>
-	  Click <a href=<%= "#{Settings.ui_endpoint}/#friends" %>>here</a> to accept.
+	  Click <a href=<%= "#{Settings.ui_endpoint}/#alumni/received" %>>here</a> to accept.
 	</p>	
 	<p>Cheers!</p>
 </div>
