--- a/app/views/user_mailer/user_request_approval.html.erb
+++ b/app/views/user_mailer/user_request_approval.html.erb
@@ -1,7 +1,7 @@
 <div style="background:#e6e6e8; color:#111; padding: 15px; font-size:1em;">
 	<p>Hello <%= "#{ @approver.name }" %>,</p>
 	<p>
-		<b><%= "#{ @requester.name }" %></b> just registered in AlumNet and must to be verified by other Alumni before getting access into the platform.
+		<b><a href=<%= "#{Settings.ui_endpoint}/#users/#{@requester.id}/about" %>><%= "#{ @requester.name }" %></a></b> just registered in AlumNet and must to be verified by other Alumni before getting access into the platform.
 	</p>
 	<p>
 	  	In case you know <%= "#{ @requester.name }" %> <b><a href=<%= "#{Settings.ui_endpoint}/#approval-requests" %>>click here to give your approval</a></b> (And by doing it you will earn 10 points in AlumNet!)
