--- a/app/views/general_mailer/user_registration_from_crowdfunding.html.erb
+++ b/app/views/general_mailer/user_registration_from_crowdfunding.html.erb
@@ -6,5 +6,5 @@
         <strong>Password: </strong><%= password %><br>
     </span>
 </div>
-<div style="margin: 40px 0px 10px 1px; text-align: center"><a href="#{Settings.ui_endpoint}/password_resets/#{@user.password_reset_token}/edit"" style="color: #FFF; padding: 15px 40px; text-decoration: none; font-family: sans-serif; font-size: 15px; background-color: #2099d0; font-weight: 100;">Create new password</a>
+<div style="margin: 40px 0px 10px 1px; text-align: center"><a href="#{Settings.ui_endpoint}/password_resets/#{@user.password_reset_token}/edit" style="color: #FFF; padding: 15px 40px; text-decoration: none; font-family: sans-serif; font-size: 15px; background-color: #2099d0; font-weight: 100;">Create new password</a>
 </div>
