--- a/app/views/general_mailer/user_commented_post_you_commented_or_liked.html.erb
+++ b/app/views/general_mailer/user_commented_post_you_commented_or_liked.html.erb
@@ -20,6 +20,6 @@
         </tr>
     </table>
     <div style="text-align: center; margin-top: 50px">
-        <a href="<%= Settings.ui_endpoint %>/#<%= created_comment.commentable.postable_type.downcase %>s/<%= created_comment.commentable.id %>/posts/<%= created_comment.id %>" style="color: #FFF; padding: 15px 30px; text-decoration: none; font-family: sans-serif; font-size: 15px; background-color: #2099d0; font-weight: 100;">VIEW CONVERSATION</a>
+        <a href="<%= Settings.ui_endpoint %>/#<%= created_comment.commentable.postable_type.downcase %>s/<%= created_comment.commentable.postable_id %>/posts/<%= created_comment.commentable.id %>" style="color: #FFF; padding: 15px 30px; text-decoration: none; font-family: sans-serif; font-size: 15px; background-color: #2099d0; font-weight: 100;">VIEW CONVERSATION</a>
     </div>
 </div>
