Fix typo on transactional email

--- a/app/views/general_mailer/new_users_digest.html.erb
+++ b/app/views/general_mailer/new_users_digest.html.erb
@@ -4,7 +4,7 @@
 	  <div style="width: 500px; margin: 5px auto 20px;">
 	      Great news, our community is growing and our dream to connect Aiesec Alumni around the world is becoming a reality. <br><br>
 	      <%= time_range_string %> <%= notifications.size %> Alumni have registered and have asked directly to you to approve their access to AlumNet. <br><br>
-	      Please, help us validate them Aiesec Alumni and give them a warm welcome onboard!
+	      Please, help us validate them as Aiesec Alumni and give them a warm welcome onboard!
 	  </div>
 	</span>
 	<table style="margin-top: 25px; margin-bottom: 35px;">
