Fix details on join group transactional email

--- a/app/views/general_mailer/join_group.html.erb
+++ b/app/views/general_mailer/join_group.html.erb
@@ -35,7 +35,7 @@
                     <% end %>
                 </div>
                 <div style="text-align: center; margin-top: 40px">
-                    <a href='<%= Settings.ui_endpoint %>/#groups/<%= group.id %>/about' style="color: #FFF; padding: 10px 30px; text-decoration: none; font-family: sans-serif; font-size: 15px; background-color: #2099d0; font-weight: 100;">JOIN GROUP</a>
+                    <a href='<%= Settings.ui_endpoint %>/#groups/<%= group.id %>/posts' style="color: #FFF; padding: 10px 30px; text-decoration: none; font-family: sans-serif; font-size: 15px; background-color: #2099d0; font-weight: 100;">GO TO GROUP</a>
                 </div>
             </th>
         </tr>
@@ -55,6 +55,6 @@
         </ul>
     </span>
     <div style="text-align: center; margin-top: 40px; margin-bottom: 20px;">
-        <a href='<%= Settings.ui_endpoint %>/#groups/<%= group.id %>/about' style="color: #2099d0; padding: 10px 30px; text-decoration: none; font-family: sans-serif; font-size: 15px; background-color: #f3f3f5; font-weight: 100; border: 1px solid #2099d0;">GO TO GROUP</a>
+        <a href='<%= Settings.ui_endpoint %>/#groups/<%= group.id %>/posts' style="color: #2099d0; padding: 10px 30px; text-decoration: none; font-family: sans-serif; font-size: 15px; background-color: #f3f3f5; font-weight: 100; border: 1px solid #2099d0;">GO TO GROUP</a>
     </div>
 </div>
